fix toast on mobile

--- a/simple_landing_page.css
+++ b/simple_landing_page.css
@@ -713,6 +713,7 @@ hr{
 }
 .toast__msg{
     margin-top: 8px;
+    margin-right: 5px;
     opacity: 0.6;
 }
 .toast__close{
