--- a/simple_landing_page_responsive.css
+++ b/simple_landing_page_responsive.css
@@ -1,4 +1,6 @@
 /* responsive */
+
+    /* tablet */
 @media only screen and (max-width:767px) {
     .container{
         max-width: 75%;
@@ -22,6 +24,8 @@
         flex-basis: 100%;
     }
 }
+
+    /* mobile */
 @media only screen and (max-width:575px) {
     .container{
         padding: 0 30px;
@@ -30,7 +34,16 @@
     .nav-bar{
         padding:25px 0;
     }
+    /* limit size toast so its not resize 500px */
+    #toast{
+        max-width: 70%;
+    }
+    .toast{
+        width: 100%;
+    }
 }
+
+    /* ipad */
 @media only screen and (min-width:768px) and (max-width:991px) {
     .container{
         max-width: 720px;
@@ -89,6 +102,7 @@
     }
 }
 
+    /* mini-screen-pc */
 @media only screen and (min-width:992px) and (max-width:1199px) {
     .container{
         max-width:960px;
@@ -97,6 +111,8 @@
         display:none;
     }
 }
+
+    /* pc */
 @media only screen and (min-width:1200px) {
     .container{
         max-width:1140px;
